# quickhatch-autotools

./: .gitignore  .gitmodules  Makefile.am  README.md  bootstrap.conf  configure.ac  qh-gnulib.m4  qh-pkg.m4
.github/workflows/: ci.yml
build-aux/: Makefile.am  git-rpm-version-gen
m4/: Makefile.am  qh-rpm.m4  quickhatch.m4
